# gridtokenx-anchor

./: .dockerignore  .env  .gitignore  ARCHITECTURE.md  Anchor.toml  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.lock.bak  Cargo.toml  Dockerfile  Dockerfile.multiplatform  Dockerfile.validator  FUNDING_OPTIONS.md  GRX_TOKEN_README.md  Makefile  PIPELINE_VERIFICATION.md  README.md  RUNTIME-ARCHITECTURE.md  SKILL.md  SMART_METER_MINTING_SUMMARY.md  TEST_RESULTS.md  US_STATUS.md  alertmanager.yml  anchor-SKILL.md  anchor.pem  check_disc.js  check_errors.txt  check_mint.js  check_mint.ts  check_mint_fallback.js  codama.config.governance.js  codama.config.oracle.js  codama.config.registry.js  codama.config.token.js  codama.config.trading.js  codama.json  convert_bytes.js  currency-mint.json  (+35 more)
.trident_temp/: Anchor.toml  Cargo.toml
aws/: cloudformation.yaml  deploy.sh  ecs-service.json  ecs-task-definition.json
docs/: ALGORITHMS.md  BACKEND_IMPLEMENTATION_GUIDE.md  CPI_IMPLEMENTATION.md  DEPLOY.md  IMPLEMENTATION_FLOW.md  P2P_ARCHITECTURE.md  README.md  SMART_METER_TO_SETTLEMENT_FLOW.md  TRADING_FLOW.md  WHITEPAPER.md  anchor-programs.md  api-reference.md  aws-deployment.md  benchmark-report.md  cross-program-integration-verification.md  dataflow.md  equations.md  glossary.md  index.md  latency-measurement-plan.md  performance-analysis.md  performance-testing.md  research-findings.md  test-results-usage-guide.md  testing-implementation-roadmap.md  testing-implementation-summary.md  tpc-c-implementation.md  tpc-methodology.md  transaction-settlement-guide.md  whitepaper-simple.aux  whitepaper-simple.tex  whitepaper-simple.toc  whitepaper.aux  whitepaper.out  whitepaper.tex  whitepaper.toc
indexer/: .env.example  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
monitoring/: alert-system.ts  dashboard-setup.ts
oracle-service/: index.ts  package-lock.json  package.json  signer.ts
programs/blockbench/: Cargo.toml
programs/blockbench/src/: error.rs  lib.rs  state.rs
programs/blockbench/src/instructions/: analytics.rs  cpu_heavy.rs  do_nothing.rs  initialize.rs  io_heavy.rs  merkle_verify.rs  metrics.rs  mod.rs  smallbank.rs  ycsb.rs
programs/dependency-lock/: Cargo.toml
programs/dependency-lock/src/: lib.rs
programs/energy-token/: Cargo.toml  README.md
programs/energy-token/src/: error.rs  events.rs  lib.rs  state.rs
programs/governance/: Cargo.toml
programs/governance/src/: contexts.rs  errors.rs  events.rs  lib.rs  size_test.rs
programs/governance/src/handlers/: aggregator.rs  authority.rs  config.rs  dao.rs  emergency.rs  erc.rs  initialize.rs  mod.rs  stats.rs
programs/governance/src/state/: aggregator.rs  erc_certificate.rs  meter_account.rs  mod.rs  poa_config.rs  proposal.rs  vote.rs  zone_config.rs
programs/oracle/: Cargo.toml  readme.md
programs/oracle/src/: error.rs  events.rs  lib.rs  state.rs
programs/registry/: Cargo.toml
programs/registry/src/: error.rs  events.rs  lib.rs  state.rs
programs/tpc-benchmark/: Cargo.toml
programs/tpc-benchmark/src/: error.rs  lib.rs  state.rs
programs/tpc-benchmark/src/instructions/: benchmark.rs  delivery.rs  initialize.rs  mod.rs  new_order.rs  order_status.rs  payment.rs  stock_level.rs
programs/trading/: Cargo.toml
programs/trading/src/: amm.rs  auction.rs  carbon.rs  confidential.rs  confidential_ops.rs  error.rs  events.rs  invariants.rs  lib.rs  meter_verification.rs  payments.rs  pricing.rs  privacy.rs  stablecoin.rs  utils.rs  wormhole.rs  zk_proofs.rs
programs/trading/src/instructions/: escrow.rs  initialize_shard.rs  initialize_zone_shard.rs  mod.rs  settle_offchain.rs  sharded_match_orders.rs  submit_sharded_limit_order.rs
programs/trading/src/state/: market.rs  mod.rs  nullifier.rs  order.rs  zone_config.rs  zone_market.rs
programs/treasury/: Cargo.toml
programs/treasury/src/: error.rs  events.rs  lib.rs  state.rs
prompts/: plan-blockchainIntegration.prompt.md  plan-blockchainTokenCreation.prompt.md
runbooks/: README.md
scripts/: 02-verify-build.sh  03-setup.sh  04-deploy.sh  05-verify-deployment.sh  06-generate-clients.js  08-token-manager.ts  09-wallet-manager.ts  QUICKSTART_LOOP_TRANSFER.md  README.md  analyze-hex.js  auction-crank.ts  basic-transfer-test.ts  bootstrap-env.ts  bootstrap-full.ts  bootstrap.ts  build.sh  calc_pda.ts  chaos-test.sh  check-disc.cjs  check-pda.ts  check-time.ts  check_pda.ts  check_registry.ts  clean.sh  create-consumer.ts  create-grx-token.ts  create-meter.ts  create-user.ts  create_batch.ts  debug-meter-setup.ts  deploy.sh  deploy_local.sh  execute-settlement.ts  final-setup.sh  fix-gateway.ts  fix-poa.ts  fix-registry-authority.ts  fix_zone_1.ts  fund-platform-sources.ts  gen-proof.rs  (+84 more)
scripts-test/: generate-registry.js  test-codama.js
sdk/: package-lock.json  package.json  tsconfig.json
src/: README.md  client.ts  create-codama-config.js  energy_token.ts  governance.ts  index.ts  oracle.ts  registry.ts  trading.ts
test-results/: smallbank-output.txt  tpc-c-output.txt  tpc-e-output.txt  tpc-h-output.txt
tests/: PERFORMANCE_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_TESTING.md  QUICKSTART_PERFORMANCE.md  advanced_p2p_trading.ts  airdrop_claim.ts  airdrop_verification.ts  api_trading.ts  atomic_settlement_rec_litesvm.ts  atomic_settlement_service_layout.ts  auction_clearing_litesvm.ts  batch_builder_litesvm.ts  batch_settle_thbg.ts  batch_settle_tps.ts  blockbench.ts  bootstrap_token2022.ts  carbon_marketplace.ts  confidential_auction.ts  confidential_bidding.ts  confidential_settlement.ts  confidential_trading.ts  cu-baseline.json  cu-baseline.ts  cu_profile_energy_token_litesvm.ts  cu_profile_governance_oracle_litesvm.ts  cu_profile_registry_litesvm.ts  cu_profile_trading_litesvm.ts  cu_profile_treasury_litesvm.ts  cu_profile_treasury_settlement_litesvm.ts  debug-tpc-c.ts  energy-token.test.ts  energy_token.ts  energy_token_admin_litesvm.ts  energy_token_rec_guards_litesvm.ts  escrow-auction.ts  escrow_settlement.ts  generation_mint_idempotency.ts  governance.test.ts  governance.ts  (+59 more)
(+933 files in other folders)
