[package]
name = "blockbench"
version = "0.1.0"
description = "BLOCKBENCH Micro-benchmarks for Solana/Anchor - Consensus, Execution, and Storage Layer Testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blockbench"

[features]
default = []
localnet = ["compute-debug/localnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
compute-debug = { path = "../../shared/compute-debug", optional = true }
