[package]
name = "blockbench"
version = "0.1.1"
description = "BLOCKBENCH Micro-benchmarks for Solana/Anchor - Consensus, Execution, and Storage Layer Testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blockbench"

[features]
default = []
localnet = ["compute-debug/localnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
compute-debug = { path = "../../shared/compute-debug", optional = true }
