[package]
name = "blockbench"
version = "0.1.1"
description = "BLOCKBENCH Micro-benchmarks for Solana/Anchor - Consensus, Execution, and Storage Layer Testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blockbench"

[features]
default = []
localnet = ["compute-debug/localnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
compute-debug = { path = "../../shared/compute-debug", optional = true }
# §3 spike T3.2: sha256 syscall for the on-chain Merkle-verify CU benchmark.
# anchor-lang 1.0 does not re-export a hash module, so depend on it directly.
solana-sha256-hasher = "2.3.0"

# Solana release builds default to overflow-checks=off (silent wrapping).
# Force checked arithmetic so bare +=/-= panic instead of corrupting state.
[profile.release]
overflow-checks = true
