[package]
name = "dependency-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "=1.5.7"
rayon = "=1.10.0"
rayon-core = "=1.12.1"
blake3 = "=1.5.5"
proc-macro-crate = "=3.2.0"
indexmap = "=2.2.6"
anchor-lang = { workspace = true }
solana-zk-token-sdk = "1.18.26"

[features]
idl-build = ["anchor-lang/idl-build"]
