[package]
name = "governance"
version = "0.1.1"
description = "Governance program for P2P Energy Trading - Engineering Department administration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance"

[features]
default = []
localnet = ["compute-debug/localnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["metadata"] }
bytemuck = { version = "1.20.0", features = ["derive"] }
compute-debug = { path = "../../shared/compute-debug", optional = true }
registry = { path = "../registry", features = ["cpi"] }

# Solana release builds default to overflow-checks=off (silent wrapping).
# Force checked arithmetic so bare +=/-= panic instead of corrupting state.
[profile.release]
overflow-checks = true
