[package]
name = "registry"
version = "0.1.1"
description = "Registry program for P2P Energy Trading - User and meter management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[features]
default = []
localnet = ["compute-debug/localnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["metadata"] }
bytemuck = { version = "1.20.0", features = ["derive"] }
compute-debug = { path = "../../shared/compute-debug", optional = true }

# Add energy-token program for CPI
energy-token = { path = "../energy-token", features = ["cpi"] }

# Solana release builds default to overflow-checks=off (silent wrapping).
# Force checked arithmetic so bare +=/-= panic instead of corrupting state.
[profile.release]
overflow-checks = true
