[package]
name = "tpc-benchmark"
version = "0.1.1"
description = "TPC-C/TPC-E Benchmark Implementation for Solana Anchor - PoA Environment"
edition = "2021"
license = "MIT"
authors = ["GridTokenX Research Team"]
repository = "https://github.com/NakaSato/gridtokenx-anchor"

[lib]
crate-type = ["cdylib", "lib"]
name = "tpc_benchmark"

[features]
default = []
localnet = ["compute-debug/localnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0" }
bytemuck = { version = "1.13.1", features = ["derive"] }
compute-debug = { path = "../../shared/compute-debug", optional = true }

# Solana release builds default to overflow-checks=off (silent wrapping).
# Force checked arithmetic so bare +=/-= panic instead of corrupting state.
[profile.release]
overflow-checks = true
