[package]
name = "trading"
version = "0.1.0"
description = "Trading program for P2P Energy Trading - Order book and marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
anchor-debug = []
custom-panic = []
custom-heap = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
localnet = ["compute-debug/localnet"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
spl-token = { workspace = true }

sha2 = "0.10"
hmac = "0.12"
base64 = { workspace = true }
bytemuck = { version = "1.16", features = ["derive"] }
compute-debug = { path = "../../shared/compute-debug", optional = true }
governance = { path = "../governance", features = ["cpi"] }
