[package]
name = "trading"
version = "0.1.1"
description = "Trading program for P2P Energy Trading - Order book and marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading"

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []
anchor-debug = []
custom-panic = []
custom-heap = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
localnet = ["compute-debug/localnet", "test-skip-zk"]
test-skip-zk = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["metadata"] }

# Build-constraint pins (NOT used directly in src): force an SBF-compatible blake3
# via the solana-blake3-hasher transitive chain, and pin proc-macro-crate for the
# anchor-derive toolchain. Do not remove — removing breaks SBF resolution.
blake3 = "=1.5.5"
proc-macro-crate = "^3.4.0"

bytemuck = { version = "1.16", features = ["derive"] }
compute-debug = { path = "../../shared/compute-debug", optional = true }
governance = { path = "../governance", features = ["cpi"] }

# Solana release builds default to overflow-checks=off (silent wrapping).
# Force checked arithmetic so bare +=/-= panic instead of corrupting state.
[profile.release]
overflow-checks = true
